kubernetes/rendered/production/infrastructure/external-secrets/admissionregistration.k8s.io_v1_validatingwebhookconfiguration_externalsecret-validate.yaml
# Source: external-secrets-wrapper/charts/external-secrets/templates/validatingwebhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: externalsecret-validate
  labels:
    helm.sh/chart: external-secrets-0.20.2
    app.kubernetes.io/name: external-secrets-webhook
    app.kubernetes.io/instance: external-secrets
    app.kubernetes.io/version: v0.20.2
    app.kubernetes.io/managed-by: Helm
    external-secrets.io/component: webhook
  annotations:
    cert-manager.io/inject-ca-from: external-secrets/external-secrets-webhook
webhooks:
  - name: validate.externalsecret.external-secrets.io
    rules:
      - apiGroups:
          - external-secrets.io
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
          - DELETE
        resources:
          - externalsecrets
        scope: Namespaced
    clientConfig:
      service:
        namespace: external-secrets
        name: external-secrets-webhook
        path: /validate-external-secrets-io-v1-externalsecret
    admissionReviewVersions:
      - v1
      - v1beta1
    sideEffects: None
    timeoutSeconds: 5
    failurePolicy: Fail
